fixed contrast issues

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -7,7 +7,7 @@
 h1,
 h2 {
     font-family: "Sour Gummy", sans-serif;
-    color: #E64D0B;
+    color: #01295F;
 }
 
 p {
